src/HomePage/home.css
* {
  padding: 0px;
  margin: 0px !important;
  box-sizing: border-box;
}

.noDataUser {
  font-size: 30px;
  display: flex;
  justify-content: center;
}

.commentMsg {
  background-color: white;
  width: 100%;
  padding: 10px;
  border-radius: 10px;
  margin-bottom: 10px !important;
}

.commentStar {
  height: 15px;
  margin-right: 5px !important;
}

.chipName {
  border: 1px solid;
  padding: 5px;
  border-radius: 10px;
}

h5~p {
  margin: 5px !important;
}

.viewPart {
  padding: 10px;
  width: 100%;
  justify-content: center;
  height: 70vh;
  border-radius: 10px;
  background-color: #EFEAE2;
  overflow: auto;
}

form {
  padding: 10px;
  background-color: white;
}

.title {
  font-size: 30px;
  text-align: center;
}

form .chipContainer {
  display: flex;
  padding: 10px 0px;
  flex-wrap: wrap;
  row-gap: 10px;
  column-gap: 10px;
}

.rating {
  display: flex;
  justify-content: space-evenly;
  padding: 10px 0px;
  flex-direction: row-reverse;
}

.rating input {
  display: none;
}

.rating label {
  cursor: pointer;
  width: 40px;
  height: 40px;
  background-image: url('./empty-star.png');
  background-size: cover;
  display: inline-block;
}

.rating input:checked~label {
  background-image: url('filled-star.png');
}

.selectedChip {
  background-color: gray;
}

.rating label:hover,
.rating label:hover~label {
  background-image: url('filled-star.png');
}

form .chip {
  border: 1px solid black;
  border-radius: 10px;
  padding: 5px;
  justify-content: center;
  font-size: 17px;
  cursor: pointer;
}

.chipPositive {
  background-color: #c1ffc1;
}

.chipNegative {
  background-color: #ffadad;
}

.activeChip {
  background-color: #9fa79f;
}


form .chip:hover {
  background-color: #9fa79f;
}

.formSubmitButton {
  background-color: white;
  padding: 10px;
  border-radius: 10px;
  position: absolute;
  bottom: 5%;
  right: 5%;
  cursor: pointer;
}

.closeFeedbackForm {
  font-size: 25px;
  background: white;
  border-radius: 10px;
  border: none;
  cursor: pointer;
  position: absolute;
  top: 2%;
  right: 2%;
}

.noFeedBackText {
  font-size: 40px;
  text-align: center;
  color: gray;
}

.errorMsg {
  color: red;
  font-size: 25px;
}

.chipPartition {
  display: flex;
  overflow: auto;
  height: 50vh;
  justify-content: space-evenly;
  padding: 10px;
  margin-bottom: 50px !important;
}

.chipContainerLeft,
.chipContainerRight {
  width: 50%;
  flex-wrap: wrap;
  display: flex;
  column-gap: 10px;
  row-gap: 10px;
}

.addReview {
  display: flex;
  padding: 10px;
  width: 100%;
  justify-content: center;
}

.welcomeMsg {
  font-size: 34px;
}

.tip {
  font-size: 25px;
  color: red;
}

.getStarted {
  background: aliceblue;
  border-radius: 10px;
  padding: 12px;
  margin-top: 20px !important;
  cursor: pointer;
}

.commentDate {
  color: gray;
}

.parentContainer {
  background-color: #000;
  color: white;
  height: 100vh;
}

.container {
  padding: 10px;
}

.dashboardContainer {
  display: flex;
}

.scrollView .nameSearch {
  height: 70px;
  padding: 10px;
  position: sticky;
  top: 0%;
  background-color: #fff;
  border-right: none;
}

.nameSearch input {
  width: 100%;
  height: 100%;
  background: #EFF2F5;
  font-size: 24px;
  padding-left: 10px;
  padding-right: 10px;
  box-sizing: border-box;
  color: #667681;
  border-radius: 10px;
  border-color: gray;
}

.scrollView .nameInfo {
  display: flex;
  padding: 10px;
  font-size: 30px;
  cursor: pointer;
  border-top: 1px solid black;
  background-color: #fff;
  align-items: center;
}

.userProfilePic {
  border: 1px solid black;
  /* padding: 2px; */
  background-color: #b45afa;
  height: 50px;
  border-radius: 50%;
  width: 50px;
  display: inline-block;
}

.userName {
  background-color: inherit;
  padding-left: 15px;
  font-size: 25px;
}

.scrollView .nameInfo:hover {
  background-color: #EFF2F5;
}

.dashboardTitle {
  font-size: 30px;
  text-align: center;
  padding-bottom: 10px;
}

.listDesingation {
  font-size: 20px;
  color: #667681;
}

/* Safari */
@-webkit-keyframes spin {
  0% {
    -webkit-transform: rotate(0deg);
  }

  100% {
    -webkit-transform: rotate(360deg);
  }
}

@keyframes spin {
  0% {
    transform: rotate(0deg);
  }

  100% {
    transform: rotate(360deg);
  }
}

@media only screen and (max-width: 473px) {
  .welcomeContainer {
    padding: 20px;
    text-align: center;
  }

  .english {
    font-size: 20px;
  }

  .hindi {
    font-size: 20px;
  }

  .dashboardContainer .nameCol {
    border: 1px solid black;
    width: 100%;
    position: relative;
  }

  .dashboardContainer .detailCol {
    position: absolute;
    top: 60%;
  }

  .scrollView {
    overflow: auto;
    height: 40vh;
  }

  .noUserSelect {
    font-size: 25px;
    color: #667681;
    padding: 10px;
    text-align: center;
  }

  .leftIcon {
    display: flex;
    align-items: center;
    justify-content: center;
  }

  .fa-arrow-left,
  .fa-arrow-up {
    font-size: 30px;
  }

  .detailCol .nameHeader {
    font-size: 20px;
    padding: 10px;
    background-color: #ffffff;
    text-align: center;
    font-weight: bold;
  }

  .nameDetails {
    display: flex;
    padding: 10px;
    padding-left: 0px;
  }

  .floatingButton {
    border: 1px solid;
    position: fixed;
    bottom: 3%;
    right: 7%;
    border-radius: 10px;
    padding: 10px;
    background-color: #fee7d8;
    cursor: pointer;
    width: 75px;
    text-align: center;
  }

  .chipNameContainer {
    display: flex;
    justify-content: flex-start;
    column-gap: 10px;
    flex-wrap: wrap;
    row-gap: 10px;
  }

  .openFeedbackForm {
    z-index: 999;
    display: block;
    border: 1px solid black;
    width: 95%;
    background-color: #fff;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    border-radius: 10px;
    padding: 10px;
    min-height: 70vh;
  }

  .openFeedbackFormShadow {
    display: block;
    border: 1px solid black;
    height: 100%;
    width: 100%;
    background-color: black;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    opacity: 50%;
  }

  .loader {
    border: 6px solid #ffff;
    border-radius: 50%;
    border-top: 6px solid #025D4B;
    width: 50px;
    height: 50px;
    animation: spin 2s linear infinite;
    position: absolute;
    top: 50%;
    left: 40%;
  }

  .detailLoaderTop {
    top: 100%;
  }

}

@media only screen and (min-width: 473px) {
  .welcomeContainer {
    text-align: center;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
  }

  .english {
    font-size: 25px;
  }

  .hindi {
    font-size: 25px;
  }

  .dashboardContainer .nameCol {
    border: 1px solid black;
    width: 30%;
    position: relative;
  }

  .dashboardContainer .detailCol {
    border: 1px solid black;
    width: 70%;
    border-left: none;
    position: relative;
    min-height: 85vh;
  }

  .scrollView {
    overflow: auto;
    height: 86vh;
  }

  .noUserSelect {
    font-size: 50px;
    color: #667681;
    padding: 20px;
    text-align: center;
  }

  .leftIcon {
    display: flex;
    align-items: center;
    justify-content: center;
  }

  .fa-arrow-left {
    font-size: 200px;
  }

  .detailCol .nameHeader {
    font-size: 35px;
    padding: 10px;
    background-color: #ffffff;
    text-align: center;
  }

  .nameDetails {
    display: flex;
    padding: 10px;
  }

  .floatingButton {
    border: 1px solid;
    position: fixed;
    bottom: 7%;
    right: 3%;
    border-radius: 10px;
    padding: 10px;
    background-color: #fee7d8;
    cursor: pointer;
  }

  .chipNameContainer {
    display: flex;
    justify-content: flex-start;
    column-gap: 10px;
    flex-wrap: wrap;
    row-gap: 10px;
  }


  .openFeedbackForm {
    z-index: 999;
    display: block;
    border: 1px solid black;
    width: 700px;
    background-color: #fff;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    border-radius: 10px;
    padding: 10px;
    min-height: 70vh;
  }

  .openFeedbackFormShadow {
    display: block;
    border: 1px solid black;
    height: 100%;
    width: 100%;
    background-color: black;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    opacity: 50%;
  }

  .loader {
    border: 6px solid #ffff;
    border-radius: 50%;
    border-top: 6px solid #025D4B;
    width: 50px;
    height: 50px;
    animation: spin 2s linear infinite;
    position: absolute;
    top: 50%;
    left: 40%;
  }

}

